# C_serverAPP

./: CMakeLists.txt
src/: main.cpp
src/lib/client/: Client.cpp  Client.h
src/lib/client_thread/: client_thread.cpp  client_thread.h
src/lib/server/: Server.cpp  Server.h
src/lib/server_thread/: server_thread.cpp  server_thread.h
src/lib/ui/clientgui/: clientgui.cpp  clientgui.h  clientgui.ui
src/lib/ui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/lib/ui/servergui/: servergui.cpp  servergui.h  servergui.ui
